# marc-annoyed

./: .gitignore  Cargo.toml  index.html  main.ts  package-lock.json  package.json
src/: lib.rs
src/engine/: engine.rs  game_logic.rs  mod.rs
src/engine/three/: matrix.rs  mod.rs  object_3d.rs  object_parser.rs  triangle.rs  vector.rs  vertex.rs
src/game/: logic.rs  marc_annoyed.rs  mod.rs
src/web/: animation_frame.rs  assets.rs  canvas.rs  mod.rs
